--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>INSERT YOUR TITLE HERE</title>
-    <meta name="description" content="INSERT YOUR SITE DESCRIPTION HERE">
-    <meta name="author" content="INSERT YOUR NAME HERE">
+    <title>WHats Inside The Black Box</title>
+    <meta name="description" content="Black Box MYstery">
+    <meta name="author" content="Roger Guaraca">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1>Claim</h1>
-    <p>INSERT YOUR CLAIM HERE</p>
-    <h1> </h1>
-    <p> </p>
+    <p>I say that the system inside of the box is similar to the greedy cup siphon as it is able to hold water to the point where if enough water is added, it all gets siphoned out of the container of water.</p>
+    <h1>Evidence</h1>
+    <p>The mystery black box is a drink cooler container that's been locked in order to conceal the system that allows it to hold water inside of it where it stores enough water and lets all of it go down a funnel and out of the box.</p>
     
   </body>
 </html>
